Changelog
=========

8.3 - (2018-03-01)
------------------
* Feature: Modified the ordering of elementes in the template
  [petchesi-iulian refs #90589]
* Feature: Implemented responsive design and resized the viewer
  [petchesi-iulian refs #90589]
* Feature: Modified the report template and added a browser view which 'serves'
  the pdf file to the viewer, also modified the styling of the reports
  [petchesi-iulian refs #90589]
* Bug fix: avoid js error within report_file.pt by calling js within dom ready
  [ichim-david refs #91577]

8.2 - (2017-12-12)
------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

8.1 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

8.0 - (2017-08-16)
------------------
* Bug fix W3C compliance modifications
  [valipod refs #86295]
* Feature: Canonical is now pointing to latest report from publication group
  Added tests for this feature
  [zoltan_andras refs #86570]

7.9 - (2017-05-22)
------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

7.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

7.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

7.6 - (2016-12-28)
------------------
* Change: removed condition which states that media link must be from ftp.eea
  and show folder url also for anonymous from report.pt
  [ichim-david refs #79977]

7.5 - (2016-08-29)
------------------
* Feature: Show Files no matter if there are Document/Page in root
  [catalin refs #75197]

7.4 - (2016-08-03)
------------------
* Feature: Display message if there is no printed edition
  [catalin refs #73796]

7.3 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

7.2 - (2016-05-04)
------------------
* Bug fix: Fix tests dependency to eea.rdfmarshaller
  [avoinea]
